all bootcamp functions test

--- a/mocha-intro/index.html
+++ b/mocha-intro/index.html
@@ -2,15 +2,16 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js" charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
-</head>
+
+        <meta charset="utf-8">
+        <title></title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js" charset="utf-8"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
+    </head>
 
 <body>
-    <div id="mocha"></div>
+    <div id="mocha"></div>  
     <script>
         mocha.setup('bdd');
         var assert = chai.assert;
@@ -50,8 +51,15 @@
     <script src="../functions/totalPhoneBill.js" charset="utf-8"></script>
     <script src="../tests/totalPhoneBill.test.js" charset="utf-8"></script>
 
+    <script src="../functions/findItemsOver20.js" charset="utf-8"></script>
+    <script src="../tests/findItemsOver20.test.js" charset="utf-8"></script>
 
+   
+    <script src="../functions/findItemsOver.js" charset="utf-8"></script>
+    <script src="../tests/findItemsOver.tests.js" charset="utf-8"></script>
 
+    <script src="../functions/mostProfitableDepartment.js" charset="utf-8"></script>
+    <script src="../tests/mostProfitableDepartment.test.js" charset="utf-8"></script>
 
 
 
